Update theme and color configurations for improved aesthetics and consistency
- Modified color settings in fuzzel_theme.ini and ghostty colors to enhance visual appeal with a darker theme.
- Updated GTK CSS files for both GTK 3 and GTK 4 to reflect new color choices, ensuring a cohesive look across applications.
- Adjusted Hyprland color configurations for better integration with the updated theme.
- Enhanced illogical-impulse config with new wallpaper path and refined transparency settings for improved user experience.

--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -1,10 +1,10 @@
 # general {
-#     col.active_border = rgba(86948dAA)
-#     col.inactive_border = rgba(3d4944AA)
+#     col.active_border = rgba(919191AA)
+#     col.inactive_border = rgba(474747AA)
 # }
 
 misc {
-    background_color = rgba(0a1611FF)
+    background_color = rgba(131313FF)
 }
 
 plugin {
@@ -17,16 +17,16 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba(0a1611FF)
-        col.text = rgba(d8e6deFF)
+        bar_color = rgba(131313FF)
+        col.text = rgba(e2e2e2FF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(d8e6de), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(d8e6de), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(d8e6de), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(e2e2e2), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(e2e2e2), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(e2e2e2), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(00e0b2AA) rgba(00e0b277),pinned:1
+windowrulev2 = bordercolor rgba(92ccffAA) rgba(92ccff77),pinned:1
