--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -163,6 +163,7 @@ layerrule = ignorealpha 0.6, osk[0-9]*
 layerrule = blurpopups, quickshell:.*
 layerrule = blur, quickshell:.*
 layerrule = ignorealpha 0.79, quickshell:.*
+layerrule = ignorealpha 0.15, quickshell:dock
 layerrule = animation slide, quickshell:bar
 layerrule = animation slide bottom, quickshell:cheatsheet
 layerrule = animation slide bottom, quickshell:dock
