Update theme and color configurations for enhanced aesthetics and consistency
- Revised color settings in fuzzel_theme.ini and ghostty colors to adopt a darker theme for improved visual appeal.
- Updated GTK CSS files for both GTK 3 and GTK 4 to align with the new color scheme, ensuring a cohesive application appearance.
- Adjusted Hyprland color configurations for better integration with the updated theme.
- Enhanced illogical-impulse config with a new wallpaper path for improved user experience.
- Refined transparency settings in Dock.qml for a more polished visual effect.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -95,7 +95,7 @@
       "workspaceZoom": 1
     },
     "thumbnailPath": "/home/ultimatebrok/.local/state/quickshell/user/generated/wallpaper/mpvpaper_thumbnails/mylivewallpapers-com-Hi-Tech-User-Interface-FHD.mp4.jpg",
-    "wallpaperPath": "/home/ultimatebrok/Pictures/Wallpapers/windows-11-bloom-3840x2160-16795.png",
+    "wallpaperPath": "/home/ultimatebrok/Pictures/Wallpapers/windows-11-stock-official-colorful-3840x2160-5658.jpg",
     "widgets": {
       "clock": {
         "cookie": {
