Update illogical-impulse configuration and bar visibility logic
- Enabled auto-hide feature in config.json for improved user experience.
- Modified Bar.qml to include logic for showing the bar based on workspace activity, enhancing visibility when the active workspace is empty.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -137,7 +137,7 @@
     },
     "bar": {
         "autoHide": {
-            "enable": false,
+            "enable": true,
             "hoverRegionWidth": 2,
             "pushWindows": false,
             "showWhenPressingSuper": {
@@ -250,7 +250,7 @@
             "org.gnome.solanum",
             "io.github.diegoivanme.flowtime"
         ],
-        "pinnedOnStartup": true
+        "pinnedOnStartup": false
     },
     "enabledPanels": [
         "iiBar",
