Update GTK icon theme and adjust transparency settings in configuration

--- a/config/hypr/hyprland/env.conf
+++ b/config/hypr/hyprland/env.conf
@@ -47,7 +47,7 @@ env = QT_QPA_PLATFORM, wayland
 env = QT_QPA_PLATFORMTHEME, kde
 env = XDG_MENU_PREFIX, plasma-
 # Icon & sound themes (merged from custom/env.conf)
-env = GTK_ICON_THEME, Fluent-dark
+env = GTK_ICON_THEME, Fluent-teal
 env = XDG_SOUND_THEME_PATH, /home/ultimatebrok/.local/share/sounds
 
 # ######## Wayland #########
