Enhance media playback experience by adjusting transparency settings, refactoring progress calculations, and introducing MprisUtils for smoother playback handling

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -50,8 +50,8 @@
         },
         "transparency": {
             "automatic": true,
-            "backgroundTransparency": null,
-            "contentTransparency": null,
+            "backgroundTransparency": 0.11,
+            "contentTransparency": 0.57,
             "enable": true
         },
         "wallpaperTheming": {
@@ -231,7 +231,7 @@
         "code": "0;P;d;1;0l;10;0o;2;1b;0"
     },
     "dock": {
-        "enable": true,
+        "enable": false,
         "height": 60,
         "hoverRegionHeight": 2,
         "hoverToReveal": true,
