Refactor GTK and Hyprland color configurations for improved visual hierarchy
- Updated GTK CSS files to utilize surface container colors for better elevation clarity in headerbars, popovers, views, and cards.
- Adjusted Hyprland color settings to enhance separation from backgrounds, improving overall appearance and usability.
- Refined appearance settings in Matugen templates to align with new color definitions, ensuring consistency across themes.

--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -17,7 +17,8 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba(0a1611FF)
+        # Use a slightly elevated surface for better separation from the wallpaper/background
+        bar_color = rgba(121e1aFF)
         col.text = rgba(d8e6deFF)
 
 
