--- a/config/matugen/templates/hyprland/colors.conf
+++ b/config/matugen/templates/hyprland/colors.conf
@@ -17,15 +17,16 @@ plugin {
         bar_precedence_over_border = true
         bar_part_of_window = true
 
-        bar_color = rgba({{colors.background.default.hex_stripped}}FF)
-        col.text = rgba({{colors.on_background.default.hex_stripped}}FF)
+        # Use a slightly elevated surface for better separation from the wallpaper/background
+        bar_color = rgba({{colors.surface_container_low.dark.hex_stripped}}FF)
+        col.text = rgba({{colors.on_surface.dark.hex_stripped}}FF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb({{colors.on_background.default.hex_stripped}}), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb({{colors.on_background.default.hex_stripped}}), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb({{colors.on_background.default.hex_stripped}}), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb({{colors.on_surface.dark.hex_stripped}}), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb({{colors.on_surface.dark.hex_stripped}}), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb({{colors.on_surface.dark.hex_stripped}}), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
