--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -1,10 +1,10 @@
 # general {
-#     col.active_border = rgba(86948dAA)
-#     col.inactive_border = rgba(3d4944AA)
+#     col.active_border = rgba(849491AA)
+#     col.inactive_border = rgba(3b4a47AA)
 # }
 
 misc {
-    background_color = rgba(0a1611FF)
+    background_color = rgba(0d1514FF)
 }
 
 plugin {
@@ -18,16 +18,16 @@ plugin {
         bar_part_of_window = true
 
         # Use a slightly elevated surface for better separation from the wallpaper/background
-        bar_color = rgba(121e1aFF)
-        col.text = rgba(d8e6deFF)
+        bar_color = rgba(161d1cFF)
+        col.text = rgba(dce4e2FF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(d8e6de), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(d8e6de), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(d8e6de), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(dce4e2), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(dce4e2), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(dce4e2), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(00e0b2AA) rgba(00e0b277),pinned:1
+windowrulev2 = bordercolor rgba(49f3e3AA) rgba(49f3e377),pinned:1
