Refactor keybinds and update configuration files for improved functionality
- Commented out unused keybindings in hyprland keybinds configuration for better clarity.
- Updated illogical-impulse configuration to enhance audio settings, appearance options, and sidebar functionalities.
- Modified video recording scripts to replace deprecated commands with more reliable alternatives, ensuring smoother operation.
- Improved package installation script for better user interaction and streamlined package management.

--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -27,7 +27,7 @@ bind = Super, mouse_down,global, quickshell:overviewToggleReleaseInterrupt # [hi
 # bind = Super, Tab, global, quickshell:overviewWorkspacesToggle # [hidden] Toggle overview/launcher (alt)
 bind = Shift+Super+Alt, Slash, exec, qs -p ~/.config/quickshell/$qsConfig/welcome.qml # [hidden] Launch welcome app
 bind = Super, Tab, focuscurrentorlast # [hidden] Switch between 2 most recent apps
-bind = Alt, Space, exec, vicinae toggle
+# bind = Alt, Space, exec, vicinae toggle
 
 
 ### Quick Actions (Clipboard / Emoji / Workspace HUD)
@@ -179,8 +179,8 @@ bind = Super+Alt, code:81, exec, ~/.config/hypr/hyprland/scripts/workspace_actio
 bind = Super+Alt, code:90, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh movetoworkspacesilent 10 # [hidden]
 
 ### Workspace Sends (Scroll / Paging)
-bind = Super+Shift, mouse_down, layoutmsg, move -col # [hidden] Hyprscrolling scroll left
-bind = Super+Shift, mouse_up, layoutmsg, move +col # [hidden] Hyprscrolling scroll right
+# bind = Super+Shift, mouse_down, layoutmsg, move -col # [hidden] Hyprscrolling scroll left
+# bind = Super+Shift, mouse_up, layoutmsg, move +col # [hidden] Hyprscrolling scroll right
 bind = Super+Alt, mouse_down, movetoworkspace, -1 # [hidden]
 bind = Super+Alt, mouse_up, movetoworkspace, +1 # [hidden]
 bind = Super+Alt, Page_Down, movetoworkspace, +1 # [hidden]
@@ -335,30 +335,30 @@ bind = Ctrl+Super, Slash, exec, xdg-open ~/.config/illogical-impulse/config.json
 # Open Hyprland keybinds
 bind = Ctrl+Super+Alt, Slash, exec, xdg-open ~/.config/hypr/hyprland/keybinds.conf # Edit keybinds
 
-##! Hyprscrolling
-# Move layout horizontally (using Y/U to avoid conflicts with Period/Comma)
-# bind = Super, Y, layoutmsg, move -col # Move layout left
-# bind = Super, U, layoutmsg, move +col # Move layout right
-# Move window to column
-bind = Super+Shift, Y, layoutmsg, movewindowto l # Move window left
-bind = Super+Shift, U, layoutmsg, movewindowto r # Move window right
-bind = Super+Shift, I, layoutmsg, movewindowto u # Move window up
-bind = Super+Shift, O, layoutmsg, movewindowto d # Move window down
-# Additional layout controls
-bind = Super+Alt, Y, layoutmsg, colresize -0.1 # Resize column smaller
-bind = Super+Alt, U, layoutmsg, colresize +0.1 # Resize column larger
-bind = Super+Alt, P, layoutmsg, promote # Promote window to new column
-bind = Super+Alt, I, layoutmsg, togglefit # Toggle fit method
-# Fit helpers
-bind = Super+Ctrl, F, layoutmsg, fit active # Fit focused column
-bind = Super+Ctrl, G, layoutmsg, fit visible # Fit visible columns
-bind = Super+Ctrl+Shift, F, layoutmsg, fit all # Fit all columns
-# Focus helpers (wrap inside layout)
-bind = Super+Ctrl, H, layoutmsg, focus l # Focus column left
-bind = Super+Ctrl, L, layoutmsg, focus r # Focus column right
-bind = Super+Ctrl, K, layoutmsg, focus u # Focus row up
-bind = Super+Ctrl, J, layoutmsg, focus d # Focus row down
-# Swap entire columns
-bind = Super+Ctrl+Shift, H, layoutmsg, swapcol l # Swap current column left
-bind = Super+Ctrl+Shift, L, layoutmsg, swapcol r # Swap current column right
+# ##! Hyprscrolling
+# # Move layout horizontally (using Y/U to avoid conflicts with Period/Comma)
+# # bind = Super, Y, layoutmsg, move -col # Move layout left
+# # bind = Super, U, layoutmsg, move +col # Move layout right
+# # Move window to column
+# bind = Super+Shift, Y, layoutmsg, movewindowto l # Move window left
+# bind = Super+Shift, U, layoutmsg, movewindowto r # Move window right
+# bind = Super+Shift, I, layoutmsg, movewindowto u # Move window up
+# bind = Super+Shift, O, layoutmsg, movewindowto d # Move window down
+# # Additional layout controls
+# bind = Super+Alt, Y, layoutmsg, colresize -0.1 # Resize column smaller
+# bind = Super+Alt, U, layoutmsg, colresize +0.1 # Resize column larger
+# bind = Super+Alt, P, layoutmsg, promote # Promote window to new column
+# bind = Super+Alt, I, layoutmsg, togglefit # Toggle fit method
+# # Fit helpers
+# bind = Super+Ctrl, F, layoutmsg, fit active # Fit focused column
+# bind = Super+Ctrl, G, layoutmsg, fit visible # Fit visible columns
+# bind = Super+Ctrl+Shift, F, layoutmsg, fit all # Fit all columns
+# # Focus helpers (wrap inside layout)
+# bind = Super+Ctrl, H, layoutmsg, focus l # Focus column left
+# bind = Super+Ctrl, L, layoutmsg, focus r # Focus column right
+# bind = Super+Ctrl, K, layoutmsg, focus u # Focus row up
+# bind = Super+Ctrl, J, layoutmsg, focus d # Focus row down
+# # Swap entire columns
+# bind = Super+Ctrl+Shift, H, layoutmsg, swapcol l # Swap current column left
+# bind = Super+Ctrl+Shift, L, layoutmsg, swapcol r # Swap current column right
 
