Update configuration files for btop, fish, and hyprland (0.53.0) to enhance functionality and user experience
- Updated btop configuration to version 1.4.6, adjusting boolean values to lowercase and adding terminal synchronization option.
- Added a new variable in fish configuration for a numbered git indicator.
- Modified hyprland monitor and general configurations for improved display settings and layout behavior.
- Refined window rules in hyprland to enhance matching criteria and improve window management.
- Adjusted master layout settings in hyprland for better window distribution and behavior.

--- a/config/hypr/hyprland/layouts/master-layout.conf
+++ b/config/hypr/hyprland/layouts/master-layout.conf
@@ -10,7 +10,7 @@ master {
     
     # Master window size as percentage [0.0 - 1.0]
     # 0.55 = 55% master, 45% slave
-    mfact = 0.55
+    mfact = 0.50
     
     # New window behavior: master, slave, or inherit
     new_status = slave
@@ -25,7 +25,7 @@ master {
     orientation = left
     
     # Inherit fullscreen when cycling/swapping windows
-    inherit_fullscreen = true
+    # inherit_fullscreen = true
     
     # Minimum slave windows needed for center master layout
     slave_count_for_center_master = 2
