--- a/config/hypr/hyprland/general.conf
+++ b/config/hypr/hyprland/general.conf
@@ -121,8 +121,8 @@ gestures {
 
 general {
     # layout = scrolling
-    layout = dwindle
-    # layout = master
+    # layout = dwindle
+    layout = master
 
     # FM‑7 : Packet Storm (electric cyan → hazard yellow)
     col.active_border   = rgba(00141aee) rgba(00ffddee) rgba(faff00ee) rgba(00141aee) 75deg
@@ -348,7 +348,7 @@ misc {
     animate_mouse_windowdragging = false
     enable_swallow = false
     swallow_regex = (foot|kitty|allacritty|Alacritty)
-    new_window_takes_over_fullscreen = 2
+    on_focus_under_fullscreen = 2
     allow_session_lock_restore = true
     session_lock_xray = true
     initial_workspace_tracking = false
