--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -23,7 +23,7 @@ windowrule = center on, match:title ^(Select a File)(.*)$
 windowrule = float on, match:title ^(Select a File)(.*)$
 windowrule = center on, match:title ^(Choose wallpaper)(.*)$
 windowrule = float on, match:title ^(Choose wallpaper)(.*)$
-windowrule = size 60% 65%, match:title ^(Choose wallpaper)(.*)$
+windowrule = size (monitor_w*0.6) (monitor_h*0.65), match:title ^(Choose wallpaper)(.*)$
 windowrule = center on, match:title ^(Open Folder)(.*)$
 windowrule = float on, match:title ^(Open Folder)(.*)$
 windowrule = center on, match:title ^(Save As)(.*)$
@@ -39,13 +39,13 @@ windowrule = float on, match:title ^(.*)(wants to open)$
 windowrule = float on, match:class ^(blueberry\.py)$
 windowrule = float on, match:class ^(guifetch)$   # FlafyDev/guifetch
 windowrule = float on, match:class ^(pavucontrol)$
-windowrule = size 45%, match:class ^(pavucontrol)$
+windowrule = size (monitor_w*0.45) (monitor_h*0.45), match:class ^(pavucontrol)$
 windowrule = center on, match:class ^(pavucontrol)$
 windowrule = float on, match:class ^(org.pulseaudio.pavucontrol)$
-windowrule = size 45%, match:class ^(org.pulseaudio.pavucontrol)$
+windowrule = size (monitor_w*0.45) (monitor_h*0.45), match:class ^(org.pulseaudio.pavucontrol)$
 windowrule = center on, match:class ^(org.pulseaudio.pavucontrol)$
 windowrule = float on, match:class ^(nm-connection-editor)$
-windowrule = size 45%, match:class ^(nm-connection-editor)$
+windowrule = size (monitor_w*0.45) (monitor_h*0.45), match:class ^(nm-connection-editor)$
 windowrule = center on, match:class ^(nm-connection-editor)$
 windowrule = float on, match:class .*plasmawindowed.*
 windowrule = float on, match:class kcm_.*
@@ -54,17 +54,17 @@ windowrule = float on, match:title .*Welcome
 windowrule = float on, match:title ^(illogical-impulse Settings)$
 windowrule = float on, match:title .*Shell conflicts.*
 windowrule = float on, match:class org.freedesktop.impl.portal.desktop.kde
-windowrule = size 60% 65%, match:class org.freedesktop.impl.portal.desktop.kde
+windowrule = size (monitor_w*0.6) (monitor_h*0.65), match:class org.freedesktop.impl.portal.desktop.kde
 windowrule = float on, match:class ^(Zotero)$
-windowrule = size 45%, match:class ^(Zotero)$
+windowrule = size (monitor_w*0.45) (monitor_h*0.45), match:class ^(Zotero)$
 
 # Move
 # kde-material-you-colors spawns a window when changing dark/light theme. This is to make sure it doesn't interfere at all.
 windowrule = float on, match:class ^(plasma-changeicons)$
 windowrule = no_initial_focus on, match:class ^(plasma-changeicons)$
-windowrule = move 999999 999999, match:class ^(plasma-changeicons)$
+windowrule = move (monitor_w*0.999999) (monitor_h*0.999999), match:class ^(plasma-changeicons)$
 # stupid dolphin copy
-windowrule = move 40 80, match:title ^(Copying — Dolphin)$
+windowrule = move (monitor_w*0.4) (monitor_h*0.8), match:title ^(Copying — Dolphin)$
 
 # Tiling
 windowrule = tile on, match:class ^dev\.warp\.Warp$
@@ -77,8 +77,8 @@ windowrule = no_shadow on, match:class ^(?i)tradingview.*
 # Picture-in-Picture
 windowrule = float on, match:title ^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 windowrule = keep_aspect_ratio on, match:title ^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
-windowrule = move 73% 72%, match:title ^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
-windowrule = size 25%, match:title ^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+windowrule = move (monitor_w*0.73) (monitor_h*0.72), match:title ^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+windowrule = size (monitor_w*0.25) (monitor_h*0.25), match:title ^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 windowrule = pin on, match:title ^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
 
 # --- Tearing / Performance for Windows apps (Wine/XWayland) ---
@@ -189,7 +189,7 @@ layerrule = animation slide top, match:namespace quickshell:wallpaperSelector
 # Launchers need to be FAST
 layerrule = no_anim on, match:namespace gtk4-layer-shell
 
-# Vicinae
-layerrule = blur on, match:namespace vicinae
-layerrule = ignore_alpha 0, match:namespace vicinae
-layerrule = no_anim on, match:namespace vicinae
+# # Vicinae
+# layerrule = blur on, match:namespace vicinae
+# layerrule = ignore_alpha 0, match:namespace vicinae
+# layerrule = no_anim on, match:namespace vicinae
