Refactor hyprland and Cliphist configurations for improved functionality and clarity
- Updated hyprland color configuration to use a new window rule format for better clarity and functionality.
- Enhanced Cliphist scripts to utilize printf for consistent output formatting, improving reliability in command execution.
- Streamlined the Cliphist image processing commands to ensure proper handling of image paths and entries.

--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -30,4 +30,4 @@ plugin {
     }
 }
 
-windowrule = border_color rgba(49f3e3AA) rgba(49f3e377), match:pin true
+windowrulev2 = bordercolor rgba(49f3e3AA) rgba(49f3e377),pinned:1
