Enhance battery indicator configuration and settings for improved user experience
- Added an option to show the battery percentage inside the battery icon, enhancing visibility of battery status.
- Updated the GeneralConfig.qml to include a toggle for the new battery percentage feature, allowing users to customize their interface.
- Modified BatteryIndicator.qml files to conditionally display the percentage based on user preference, improving the clarity of battery information.

--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -38,23 +38,37 @@ windowrule = center on, match:title ^(.*)(wants to open)$
 windowrule = float on, match:title ^(.*)(wants to open)$
 windowrule = float on, match:class ^(blueberry\.py)$
 windowrule = float on, match:class ^(guifetch)$   # FlafyDev/guifetch
+
 windowrule = float on, match:class ^(pavucontrol)$
 windowrule = size (monitor_w*0.45) (monitor_h*0.45), match:class ^(pavucontrol)$
 windowrule = center on, match:class ^(pavucontrol)$
+
+windowrule = float on, match:class ^(pavucontrol-qt)$
+windowrule = size (monitor_w*0.55) (monitor_h*0.7), match:class ^(pavucontrol-qt)$
+windowrule = center on, match:class ^(pavucontrol-qt)$
+
 windowrule = float on, match:class ^(org.pulseaudio.pavucontrol)$
 windowrule = size (monitor_w*0.45) (monitor_h*0.45), match:class ^(org.pulseaudio.pavucontrol)$
 windowrule = center on, match:class ^(org.pulseaudio.pavucontrol)$
+
 windowrule = float on, match:class ^(nm-connection-editor)$
 windowrule = size (monitor_w*0.45) (monitor_h*0.45), match:class ^(nm-connection-editor)$
 windowrule = center on, match:class ^(nm-connection-editor)$
+
 windowrule = float on, match:class .*plasmawindowed.*
 windowrule = float on, match:class kcm_.*
 windowrule = float on, match:class .*bluedevilwizard
 windowrule = float on, match:title .*Welcome
+
 windowrule = float on, match:title ^(illogical-impulse Settings)$
+windowrule = size (monitor_w*0.55) (monitor_h*0.7), match:title ^(illogical-impulse Settings)$
+windowrule = center on, match:title ^(illogical-impulse Settings)$
+
 windowrule = float on, match:title .*Shell conflicts.*
+
 windowrule = float on, match:class org.freedesktop.impl.portal.desktop.kde
 windowrule = size (monitor_w*0.6) (monitor_h*0.65), match:class org.freedesktop.impl.portal.desktop.kde
+
 windowrule = float on, match:class ^(Zotero)$
 windowrule = size (monitor_w*0.45) (monitor_h*0.45), match:class ^(Zotero)$
 
