Update hyprland keybinds and window rules for improved functionality and user experience
- Added new window rules for KDE Bluetooth wizard and KCM Bluetooth to enhance window management and positioning.
- Cleaned up keybinds configuration by commenting out unused sections for better clarity and organization.

--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -39,6 +39,16 @@ windowrule = float on, match:title ^(.*)(wants to open)$
 windowrule = float on, match:class ^(blueberry\.py)$
 windowrule = float on, match:class ^(guifetch)$   # FlafyDev/guifetch
 
+windowrule = float on, match:class ^(org.kde.bluedevilwizard)$
+windowrule = size (monitor_w*0.45) (monitor_h*0.55), match:class ^(org.kde.bluedevilwizard)$
+windowrule = center on, match:class ^(org.kde.bluedevilwizard)$
+
+
+windowrule = float on, match:class ^(kcm_bluetooth)$
+windowrule = size (monitor_w*0.45) (monitor_h*0.45), match:class ^(kcm_bluetooth)$
+windowrule = center on, match:class ^(kcm_bluetooth)$
+
+
 windowrule = float on, match:class ^(pavucontrol)$
 windowrule = size (monitor_w*0.45) (monitor_h*0.45), match:class ^(pavucontrol)$
 windowrule = center on, match:class ^(pavucontrol)$
