Enhance hyprland window rules for improved floating window management
- Updated window rules to disable blur for certain XWayland popups and menus, improving visual clarity.
- Introduced new floating presets for window management, allowing for easier tagging and consistent behavior across applications.
- Adjusted existing window rules to utilize the new floating presets, streamlining configuration and enhancing user experience.

--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -12,11 +12,54 @@
 # windowrule = workspace 5 silent, match:class ^(?i)spotify.*$
 
 # Disable blur for xwayland context menus
-windowrule = no_blur on, match:class ^()$, match:title ^()$
+# Some XWayland popups/menus can report empty class/title; avoid blur there.
+# (Using ^$ instead of ^()$ to stay compatible with stricter regex parsers.)
+windowrule = no_blur on, match:xwayland true, match:class ^$, match:title ^$
 # windowrule = no_blur on, match:xwayland true
 
 
 # Floating
+#
+# Floating presets (DRY)
+# - Use `tag +<preset>` in per-app rules (or via `hyprctl dispatch tagwindow +<preset>`),
+#   and keep the actual float/size/center logic here.
+# - Based on the new window rule syntax documented in the Hyprland wiki:
+#   https://wiki.hypr.land/Configuring/Window-Rules/
+windowrule {
+  name = preset-float-center
+  match:tag = fp_center
+
+  float = on
+  center = on
+}
+
+windowrule {
+  name = preset-float-45x45
+  match:tag = fp_45x45
+
+  float = on
+  center = on
+  size = (monitor_w*0.45) (monitor_h*0.45)
+}
+
+windowrule {
+  name = preset-float-45x55
+  match:tag = fp_45x55
+
+  float = on
+  center = on
+  size = (monitor_w*0.45) (monitor_h*0.55)
+}
+
+windowrule {
+  name = preset-float-55x70
+  match:tag = fp_55x70
+
+  float = on
+  center = on
+  size = (monitor_w*0.55) (monitor_h*0.7)
+}
+
 windowrule = center on, match:title ^(Open File)(.*)$
 windowrule = float on, match:title ^(Open File)(.*)$
 windowrule = center on, match:title ^(Select a File)(.*)$
@@ -39,40 +82,26 @@ windowrule = float on, match:title ^(.*)(wants to open)$
 windowrule = float on, match:class ^(blueberry\.py)$
 windowrule = float on, match:class ^(guifetch)$   # FlafyDev/guifetch
 
-windowrule = float on, match:class ^(org.kde.bluedevilwizard)$
-windowrule = size (monitor_w*0.45) (monitor_h*0.55), match:class ^(org.kde.bluedevilwizard)$
-windowrule = center on, match:class ^(org.kde.bluedevilwizard)$
+windowrule = tag +fp_45x45, match:title ^(Library)$
 
+windowrule = tag +fp_45x55, match:class ^(org.kde.bluedevilwizard)$
 
-windowrule = float on, match:class ^(kcm_bluetooth)$
-windowrule = size (monitor_w*0.45) (monitor_h*0.45), match:class ^(kcm_bluetooth)$
-windowrule = center on, match:class ^(kcm_bluetooth)$
+windowrule = tag +fp_45x45, match:class ^(kcm_bluetooth)$
 
+windowrule = tag +fp_45x45, match:class ^(pavucontrol)$
 
-windowrule = float on, match:class ^(pavucontrol)$
-windowrule = size (monitor_w*0.45) (monitor_h*0.45), match:class ^(pavucontrol)$
-windowrule = center on, match:class ^(pavucontrol)$
+windowrule = tag +fp_55x70, match:class ^(pavucontrol-qt)$
 
-windowrule = float on, match:class ^(pavucontrol-qt)$
-windowrule = size (monitor_w*0.55) (monitor_h*0.7), match:class ^(pavucontrol-qt)$
-windowrule = center on, match:class ^(pavucontrol-qt)$
+windowrule = tag +fp_45x45, match:class ^(org.pulseaudio.pavucontrol)$
 
-windowrule = float on, match:class ^(org.pulseaudio.pavucontrol)$
-windowrule = size (monitor_w*0.45) (monitor_h*0.45), match:class ^(org.pulseaudio.pavucontrol)$
-windowrule = center on, match:class ^(org.pulseaudio.pavucontrol)$
-
-windowrule = float on, match:class ^(nm-connection-editor)$
-windowrule = size (monitor_w*0.45) (monitor_h*0.45), match:class ^(nm-connection-editor)$
-windowrule = center on, match:class ^(nm-connection-editor)$
+windowrule = tag +fp_45x45, match:class ^(nm-connection-editor)$
 
 windowrule = float on, match:class .*plasmawindowed.*
 windowrule = float on, match:class kcm_.*
 windowrule = float on, match:class .*bluedevilwizard
 windowrule = float on, match:title .*Welcome
 
-windowrule = float on, match:title ^(illogical-impulse Settings)$
-windowrule = size (monitor_w*0.55) (monitor_h*0.7), match:title ^(illogical-impulse Settings)$
-windowrule = center on, match:title ^(illogical-impulse Settings)$
+windowrule = tag +fp_55x70, match:title ^(illogical-impulse Settings)$
 
 windowrule = float on, match:title .*Shell conflicts.*
 
