Enhance hyprland window rules and update configuration settings
- Added a new floating window rule for the preset-float-60x65, improving window management for specific applications.
- Updated existing window rules for KDE and Zotero to utilize tags for better organization and consistency.
- Adjusted transparency settings in the illogical-impulse configuration for improved visual clarity.
- Changed pinnedOnStartup setting to false for better control over application startup behavior.

--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -60,6 +60,15 @@ windowrule {
   size = (monitor_w*0.55) (monitor_h*0.7)
 }
 
+windowrule {
+  name = preset-float-60x65
+  match:tag = fp_60x65
+
+  float = on
+  center = on
+  size = (monitor_w*0.6) (monitor_h*0.65)
+}
+
 windowrule = center on, match:title ^(Open File)(.*)$
 windowrule = float on, match:title ^(Open File)(.*)$
 windowrule = center on, match:title ^(Select a File)(.*)$
@@ -105,11 +114,9 @@ windowrule = tag +fp_55x70, match:title ^(illogical-impulse Settings)$
 
 windowrule = float on, match:title .*Shell conflicts.*
 
-windowrule = float on, match:class org.freedesktop.impl.portal.desktop.kde
-windowrule = size (monitor_w*0.6) (monitor_h*0.65), match:class org.freedesktop.impl.portal.desktop.kde
+windowrule = tag fp_60x65, match:class org.freedesktop.impl.portal.desktop.kde
 
-windowrule = float on, match:class ^(Zotero)$
-windowrule = size (monitor_w*0.45) (monitor_h*0.45), match:class ^(Zotero)$
+windowrule = tag fp_45x45, match:class ^(Zotero)$
 
 # Move
 # kde-material-you-colors spawns a window when changing dark/light theme. This is to make sure it doesn't interfere at all.
