Update configuration files to enhance application support and image handling
- Added 'fontforge' to the list of applications in the illogical-impulse configuration for improved integration.
- Refined implicit size calculations in CliphistImage.qml to ensure proper handling of image dimensions, preventing layout issues with wide images.
- Adjusted SearchItem.qml to ensure clipboard image previews fill available width, enhancing visual consistency.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -248,7 +248,8 @@
             "cursor",
             "io.github.diegoivanme.flowtime",
             "jetbrains-pycharm",
-            "floorp"
+            "floorp",
+            "fontforge"
         ],
         "pinnedOnStartup": false
     },
