Update Hyprland startup script and monitor configuration for improved functionality
- Changed the command to start Hyprland from 'Hyprland' to 'start-hyprland' in both fish and zsh configurations for consistency and better logging.
- Updated monitor configuration to correct the positioning of HDMI-A-1, ensuring proper display alignment.
- Set 'pinnedOnStartup' to true in the illogical-impulse configuration to enhance application startup behavior.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -251,7 +251,7 @@
             "floorp",
             "fontforge"
         ],
-        "pinnedOnStartup": false
+        "pinnedOnStartup": true
     },
     "enabledPanels": [
         "iiBar",
