Refactor dock and bar components for improved layout and functionality
- Updated Dock.qml and related components to adjust positioning and margins based on dock orientation, enhancing usability.
- Replaced static background elements with dynamic BarBackdrop components for better visual consistency.
- Refined popup positioning logic in StyledPopup.qml to ensure proper screen clamping and alignment.
- Enhanced VerticalBarContent.qml to improve status group visibility and layout, ensuring a cohesive user experience.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -50,8 +50,8 @@
         },
         "transparency": {
             "automatic": true,
-            "backgroundTransparency": 0.11,
-            "contentTransparency": 0.57,
+            "backgroundTransparency": null,
+            "contentTransparency": null,
             "enable": true
         },
         "wallpaperTheming": {
@@ -124,8 +124,8 @@
                 "showOnlyWhenLocked": false,
                 "style": "digital",
                 "styleLocked": "cookie",
-                "x": 188,
-                "y": 261
+                "x": 498.5,
+                "y": 271
             },
             "weather": {
                 "enable": false,
@@ -244,12 +244,10 @@
             "spotify",
             "io.github.kukuruzka165.materialgram",
             "tradingview",
-            "code-insiders",
-            "cursor",
-            "io.github.diegoivanme.flowtime",
             "jetbrains-pycharm",
-            "floorp",
-            "fontforge"
+            "code",
+            "code-insiders",
+            "cursor"
         ],
         "pinnedOnStartup": true
     },
