--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -50,8 +50,8 @@
         },
         "transparency": {
             "automatic": true,
-            "backgroundTransparency": null,
-            "contentTransparency": null,
+            "backgroundTransparency": 0.11,
+            "contentTransparency": 0.57,
             "enable": true
         },
         "wallpaperTheming": {
@@ -137,7 +137,7 @@
     },
     "bar": {
         "autoHide": {
-            "enable": false,
+            "enable": true,
             "hoverRegionWidth": 2,
             "pushWindows": false,
             "showWhenPressingSuper": {
