Add no_anim rule for tradingview and update monitors configuration timestamp

--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -133,6 +133,7 @@ windowrule = tile on, match:class ^dev\.warp\.Warp$
 windowrule = immediate on, match:class ^(?i)tradingview.*
 windowrule = no_blur on, match:class ^(?i)tradingview.*
 windowrule = no_shadow on, match:class ^(?i)tradingview.*
+windowrule = no_anim on, match:class ^(?i)tradingview.*
 
 # Picture-in-Picture
 windowrule = float on, match:title ^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
