--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -50,8 +50,8 @@
     },
     "transparency": {
       "automatic": true,
-      "backgroundTransparency": 0.11,
-      "contentTransparency": 0.57,
+      "backgroundTransparency": null,
+      "contentTransparency": null,
       "enable": true
     },
     "wallpaperTheming": {
@@ -156,9 +156,16 @@
     },
     "resources": {
       "alwaysShowCpu": true,
+      "alwaysShowGpu": true,
       "alwaysShowSwap": true,
       "cpuWarningThreshold": 90,
+      "enable": true,
+      "gpuWarningThreshold": 90,
       "memoryWarningThreshold": 95,
+      "showCpu": true,
+      "showGpu": false,
+      "showMemory": true,
+      "showSwap": true,
       "swapWarningThreshold": 85
     },
     "screenList": [],
