Update configuration and enhance UI components for better usability
- Changed the 'pinnedOnStartup' setting in the illogical-impulse configuration to true, ensuring the application starts pinned by default.
- Improved the SearchItem.qml component by adding properties for better keyboard navigation and visual contrast, enhancing the overall user experience in the launcher list.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -253,7 +253,7 @@
       "cursor",
       "floorp"
     ],
-    "pinnedOnStartup": false
+    "pinnedOnStartup": true
   },
   "enabledPanels": [
     "iiBar",
