Update configuration files and package lists for improved functionality and organization
- Updated monitors configuration with new resolution settings for better display performance.
- Refined transparency settings in illogical-impulse configuration for enhanced visual clarity.
- Adjusted package lists to include new dependencies and remove obsolete entries, ensuring a more streamlined setup.
- Updated npm global packages to the latest versions for improved compatibility and features.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -50,8 +50,8 @@
         },
         "transparency": {
             "automatic": true,
-            "backgroundTransparency": null,
-            "contentTransparency": null,
+            "backgroundTransparency": 0.11,
+            "contentTransparency": 0.57,
             "enable": true
         },
         "wallpaperTheming": {
@@ -163,7 +163,7 @@
             "gpuWarningThreshold": 90,
             "memoryWarningThreshold": 95,
             "showCpu": true,
-            "showGpu": true,
+            "showGpu": false,
             "showMemory": true,
             "showSwap": true,
             "swapWarningThreshold": 85
@@ -197,7 +197,7 @@
         "weather": {
             "city": "Hanoi",
             "enable": true,
-            "enableGPS": false,
+            "enableGPS": true,
             "fetchInterval": 10,
             "useUSCS": false
         },
@@ -258,7 +258,7 @@
             "floorp",
             "com.mitchellh.ghostty"
         ],
-        "pinnedOnStartup": true
+        "pinnedOnStartup": false
     },
     "enabledPanels": [
         "iiBar",
