Update GTK and QT configuration files for theme consistency and improved usability
- Changed icon theme from 'Fluent-dark' to 'kora' in GTK and QT settings for a unified appearance.
- Added a new bookmarks entry for Wallpapers in GTK bookmarks file.
- Adjusted positioning settings in illogical-impulse configuration for better layout.
- Updated Spicetify version in configuration for compatibility.

--- a/config/illogical-impulse/config.json
+++ b/config/illogical-impulse/config.json
@@ -124,8 +124,8 @@
         "showOnlyWhenLocked": false,
         "style": "digital",
         "styleLocked": "cookie",
-        "x": 467.03515625,
-        "y": 421.51171875
+        "x": 544,
+        "y": 271
       },
       "weather": {
         "enable": false,
@@ -163,7 +163,7 @@
       "gpuWarningThreshold": 90,
       "memoryWarningThreshold": 95,
       "showCpu": true,
-      "showGpu": false,
+      "showGpu": true,
       "showMemory": true,
       "showSwap": true,
       "swapWarningThreshold": 85
@@ -212,7 +212,7 @@
   "battery": {
     "automaticSuspend": true,
     "critical": 5,
-    "full": 85,
+    "full": 80,
     "low": 20,
     "showPercentageInIcon": true,
     "suspend": 3
