--- a/config/qt5ct/qt5ct.conf
+++ b/config/qt5ct/qt5ct.conf
@@ -1,7 +1,7 @@
 [Appearance]
 color_scheme_path=/usr/share/qt5ct/colors/darker.conf
 custom_palette=true
-icon_theme=Fluent-dark
+icon_theme=kora
 standard_dialogs=default
 style=kvantum-dark
 
