--- a/config/spicetify/config-xpui.ini
+++ b/config/spicetify/config-xpui.ini
@@ -28,5 +28,5 @@ experimental_features = 1
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.79.425.g1d0fcf61
+version = 1.2.79.427.g80eb4a07
 with    = 2.42.7
