Enhance hypridle and illogical-impulse configurations for improved functionality and user experience
- Updated the after_sleep_cmd in hypridle.conf to restart quickshell after resuming, ensuring tray indicators are reliably repopulated.
- Refined the illogical-impulse configuration by adding sound alert properties and enhancing the structure for better organization and usability.
- Introduced new properties for wallpaper theming, transparency settings, and additional app management options in the illogical-impulse configuration.

--- a/config/hypr/hypridle.conf
+++ b/config/hypr/hypridle.conf
@@ -5,7 +5,9 @@ $suspend_cmd = systemctl suspend || loginctl suspend
 general {
     lock_cmd = $lock_cmd
     before_sleep_cmd = loginctl lock-session
-    after_sleep_cmd = hyprctl dispatch global quickshell:lockFocus
+    # After resume, some DBus-backed services (notably StatusNotifier/SystemTray)
+    # may not repopulate reliably. Restart quickshell so topbar tray indicators come back.
+    after_sleep_cmd = hyprctl dispatch global quickshell:lockFocus; killall -q qs quickshell; (qs -c ii --daemonize >/dev/null 2>&1 &)
     inhibit_sleep = 3
 }
 
