--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -1,10 +1,10 @@
 # general {
-#     col.active_border = rgba(849491AA)
-#     col.inactive_border = rgba(3b4a47AA)
+#     col.active_border = rgba(8e8fa6AA)
+#     col.inactive_border = rgba(444559AA)
 # }
 
 misc {
-    background_color = rgba(0d1514FF)
+    background_color = rgba(12131cFF)
 }
 
 plugin {
@@ -18,16 +18,16 @@ plugin {
         bar_part_of_window = true
 
         # Use a slightly elevated surface for better separation from the wallpaper/background
-        bar_color = rgba(161d1cFF)
-        col.text = rgba(dce4e2FF)
+        bar_color = rgba(1a1b25FF)
+        col.text = rgba(e3e1efFF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(dce4e2), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(dce4e2), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(dce4e2), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(e3e1ef), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(e3e1ef), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(e3e1ef), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(49f3e3AA) rgba(49f3e377),pinned:1
+windowrulev2 = bordercolor rgba(71d2ffAA) rgba(71d2ff77),pinned:1
