Update color configurations and theme settings for improved consistency across applications
- Modified color values in kdeglobals, fuzzel, ghostty, GTK, and Hyprland configurations to align with the new Material You theme.
- Enhanced background, text, selection, and border colors for a cohesive visual experience.
- Updated icon theme handling in kde-material-you-colors wrapper script to preserve user settings during theme changes.
- Improved System Tray service to recover missing items after theme changes, ensuring a seamless user experience.

--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -1,10 +1,10 @@
 # general {
-#     col.active_border = rgba(8e8fa6AA)
-#     col.inactive_border = rgba(444559AA)
+#     col.active_border = rgba(a28b8fAA)
+#     col.inactive_border = rgba(544245AA)
 # }
 
 misc {
-    background_color = rgba(12131cFF)
+    background_color = rgba(1d1013FF)
 }
 
 plugin {
@@ -18,16 +18,16 @@ plugin {
         bar_part_of_window = true
 
         # Use a slightly elevated surface for better separation from the wallpaper/background
-        bar_color = rgba(1a1b25FF)
-        col.text = rgba(e3e1efFF)
+        bar_color = rgba(26181bFF)
+        col.text = rgba(f6dce0FF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(e3e1ef), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(e3e1ef), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(e3e1ef), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(f6dce0), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(f6dce0), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(f6dce0), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(71d2ffAA) rgba(71d2ff77),pinned:1
+windowrulev2 = bordercolor rgba(ffb1c2AA) rgba(ffb1c277),pinned:1
