Update color configurations and wallpaper settings for enhanced visual consistency
- Adjusted color values in kdeglobals, fuzzel, ghostty, GTK, and Hyprland configurations to align with the Material You theme.
- Updated wallpaper paths and scaling options in the quickshell configuration for improved usability and visual appeal.
- Enhanced transparency settings and added new properties for wallpaper scaling modes in the quickshell settings, allowing for better customization.

--- a/config/hypr/hyprland/colors.conf
+++ b/config/hypr/hyprland/colors.conf
@@ -1,10 +1,10 @@
 # general {
-#     col.active_border = rgba(a28b8fAA)
-#     col.inactive_border = rgba(544245AA)
+#     col.active_border = rgba(8990a5AA)
+#     col.inactive_border = rgba(3f4759AA)
 # }
 
 misc {
-    background_color = rgba(1d1013FF)
+    background_color = rgba(10131cFF)
 }
 
 plugin {
@@ -18,16 +18,16 @@ plugin {
         bar_part_of_window = true
 
         # Use a slightly elevated surface for better separation from the wallpaper/background
-        bar_color = rgba(26181bFF)
-        col.text = rgba(f6dce0FF)
+        bar_color = rgba(181b25FF)
+        col.text = rgba(dfe2efFF)
 
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(f6dce0), 13, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(f6dce0), 13, 󰖯, hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb(f6dce0), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
+        hyprbars-button = rgb(dfe2ef), 13, 󰖭, hyprctl dispatch killactive
+        hyprbars-button = rgb(dfe2ef), 13, 󰖯, hyprctl dispatch fullscreen 1
+        hyprbars-button = rgb(dfe2ef), 13, 󰖰, hyprctl dispatch movetoworkspacesilent special
     }
 }
 
-windowrulev2 = bordercolor rgba(ffb1c2AA) rgba(ffb1c277),pinned:1
+windowrulev2 = bordercolor rgba(55d6f4AA) rgba(55d6f477),pinned:1
